--- a/FRNT-ANG/ticketSales/src/app/pages/auth/auth.component.html
+++ b/FRNT-ANG/ticketSales/src/app/pages/auth/auth.component.html
@@ -1,6 +1,6 @@
-<div class="d-flex flex-column">
+<div class="d-flex">
   <p-tabView>
-    <p-tabPanel [cache]=isTabCaching header="Авторизация">
+    <p-tabPanel [cache]='isTabCaching' header="Авторизация">
       <ng-template pTemplate="content">
         <app-authorization></app-authorization>
       </ng-template>
