--- a/FRNT-ANG/ticketSales/src/app/pages/auth/authorization/authorization.component.html
+++ b/FRNT-ANG/ticketSales/src/app/pages/auth/authorization/authorization.component.html
@@ -8,7 +8,7 @@
   </div>
   <div>
     <span class="mx-3">{{pswText}}</span>
-    <input type="text"
+    <input type="password"
            class="mt-3"
            pInputText
            [ngClass]="{'input-error' : !psw}"
