--- a/FRNT-ANG/ticketSales/src/app/pages/auth/registration/registration.component.html
+++ b/FRNT-ANG/ticketSales/src/app/pages/auth/registration/registration.component.html
@@ -24,7 +24,7 @@
   </div>
   <div>
     <span class="mx-3">Почта</span>
-    <input type="text"
+    <input type="email"
            class="mt-3"
            pInputText
            [(ngModel)]="email"/>
@@ -35,6 +35,12 @@
            class="mt-3"
            pInputText
            [(ngModel)]="cardNumber"/>
+  </div>
+  <div class="mt-3">
+    <p-checkbox name="groupname" [binary]="true"
+                label="Сохранить пользователя в локальном хранилище"
+                [(ngModel)]="saveToStorage">
+    </p-checkbox>
   </div>
 </div>
 
