--- a/FRNT-ANG/ticketSales/src/app/pages/auth/auth.component.html
+++ b/FRNT-ANG/ticketSales/src/app/pages/auth/auth.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex">
-  <p-tabView>
+  <p-tabView class="m-auto">
     <p-tabPanel [cache]='isTabCaching' header="Авторизация">
       <ng-template pTemplate="content">
         <app-authorization></app-authorization>
