--- a/FRNT-ANG/ticketSales/src/app/pages/ticket-info/ticket-item/ticket-item.component.html
+++ b/FRNT-ANG/ticketSales/src/app/pages/ticket-info/ticket-item/ticket-item.component.html
@@ -1,6 +1,6 @@
 <div class="ticket-info-wrap">
   <div>
-    <a routerLink="/tickets/tickets-list">Back</a>
+    <a routerLink="/tickets/tickets-list">Назад</a>
     <div class="mt-3">
       {{ticket?.name}}
     </div>
