--- a/FRNT-ANG/ticketSales/src/app/pages/tickets/ticket-list/ticket-list.component.html
+++ b/FRNT-ANG/ticketSales/src/app/pages/tickets/ticket-list/ticket-list.component.html
@@ -1,17 +1,17 @@
 <div *ngIf="tickets">
   <div>
-    <p>Amount: {{tourWrap.childElementCount}}</p>
-    <p>Active: {{blockDirective.activeElementIndex}}</p>
+    <p>Количество элементов: {{tourWrap.childElementCount}}</p>
+    <p>Активный элемент: {{blockDirective.activeElementIndex}}</p>
   </div>
   <div class="mb-4">
-    <span class="mx-3">Найти туры</span>
+    <span class="mx-3">Поиск тура</span>
     <input type="text"
            class="mt-3"
            pInputText
            [(ngModel)]="nameTour"/>
     <button
       (click)="search($event)" type="button"
-      class="m-3 btn btn-success">Find
+      class="m-3 btn btn-success">Найти
     </button>
 
   </div>
