Финальное состояние проекта по курсу FRNT-ANG

--- a/FRNT-ANG/ticketSales/src/app/pages/auth/registration/registration.component.html
+++ b/FRNT-ANG/ticketSales/src/app/pages/auth/registration/registration.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-column col-6 registration-input-wrap m-auto">
+<div class="d-flex flex-column registration-input-wrap m-auto">
   <div>
     <span class="mx-3">Логин</span>
     <input type="text"
