--- a/FRNT-ANG/ticketSales/src/app/pages/tickets/tickets.component.html
+++ b/FRNT-ANG/ticketSales/src/app/pages/tickets/tickets.component.html
@@ -1,9 +1,11 @@
 <div class="d-flex flex-column h-100">
   <header>
-    <app-header [menuType] = "selectedType"></app-header>
+    <app-header
+      [menuType] = "selectedType"
+    ></app-header>
   </header>
   <div class="main-content">
-    <div class="overflow-auto  h-100 w-100">
+    <div class="overflow-auto h-100 w-100 p-3">
       <router-outlet></router-outlet>
     </div>
     <app-aside (updateMenuType)="updateSelectedType($event)"></app-aside>
