Выполнены задания по Теме 2 и 3

--- a/FRNT-RXJS/ticketSales/src/app/pages/tickets/aside/aside.component.html
+++ b/FRNT-RXJS/ticketSales/src/app/pages/tickets/aside/aside.component.html
@@ -15,5 +15,13 @@
 </div>
 
 <div class="mt-3">
-  <p-calendar (onSelect)="selectDate($event)" ></p-calendar>
+  <p-calendar (onSelect)="selectDate($event)"></p-calendar>
+</div>
+
+<div class="mt-4">
+  <button class="btn-success btn" type="submit" (click)="initRestError()">Запрос с ошибкой</button>
+</div>
+
+<div class="mt-4">
+  <button class="btn-success btn" type="submit" (click)="initSettingsData()">Обновить настройки</button>
 </div>
