--- a/FRNT-RXJS/ticketSales/src/app/pages/tickets/ticket-list/ticket-list.component.html
+++ b/FRNT-RXJS/ticketSales/src/app/pages/tickets/ticket-list/ticket-list.component.html
@@ -1,21 +1,16 @@
-<div *ngIf="tickets">
+<div>
   <div *ngIf="renderCompleted">
-    <p>Количество элементов: {{tickets.length}}</p>
-    <p>Активный элемент: {{blockDirective.activeElementIndex + 1}}</p>
+    <ng-container>
+      <p>Количество элементов: {{tickets.length}}</p>
+      <p>Активный элемент: {{blockDirective.activeElementIndex + 1}}</p>
+    </ng-container>
   </div>
-  <div class="mb-4">
-    <span class="mx-3">Поиск тура</span>
-    <input type="text"
-           class="mt-3"
-           pInputText
-           [(ngModel)]="nameTour"/>
-    <button
-      (click)="search($event)" type="button"
-      class="m-3 btn btn-success">Найти
-    </button>
+  <div>
+    <input #ticketSearch [(ngModel)]="ticketSearchValue" type="text" pInputText>
+  </div>
 
-  </div>
   <div appBlocksStyle
+       *ngIf="tickets"
        #tourWrap
        #blockDirective='blocksStyle'
        [selector]="'.ticket-item'"
