--- a/FRNT-RXJS/ticketSales/src/app/pages/ticket-info/ticket-item/ticket-item.component.html
+++ b/FRNT-RXJS/ticketSales/src/app/pages/ticket-info/ticket-item/ticket-item.component.html
@@ -1,8 +1,65 @@
 <div class="ticket-info-wrap">
   <div>
-    <a routerLink="/tickets/tickets-list">Назад</a>
-    <div class="mt-3">
-      {{ticket?.name}}
+    <div class="m-3">
+      <a routerLink="/tickets/tickets-list">Назад</a>
+    </div>
+    <div class="mt-4">
+      <h4>Информация о туре</h4>
+      <div class="ticket-info">
+        Наименование тура: {{ticket?.name}}
+      </div>
+    </div>
+    <div class="mt-4">
+      <h4>Личная информация</h4>
+      <div class="mt-3 user-info" [formGroup]="userForm" (ngSubmit)="onSubmit()">
+        <div class="mt-3">
+          <span class="mx-3">Имя</span>
+          <input type="text" class="mt-3" pInputText formControlName="firstName">
+        </div>
+        <div class="mt-3">
+          <span class="mx-3">Фамилия</span>
+          <input type="text" class="mt-3" pInputText formControlName="lastName">
+        </div>
+        <div class="mt-3">
+          <span class="mx-3">Номер карты</span>
+          <input type="text" class="mt-3" pInputText formControlName="cardNumber">
+        </div>
+        <div class="mt-3">
+          <span class="mx-3">Возраст</span>
+          <p-inputNumber [showButtons]="true" formControlName="age"></p-inputNumber>
+        </div>
+        <div class="mt-3">
+          <span class="mx-3">Дата рождения</span>
+          <p-calendar (onSelect)="selectDate($event)" formControlName="birthDay"></p-calendar>
+        </div>
+        <div class="mt-3">
+          <span class="mx-3">Гражданство</span>
+          <input type="text" class="mt-3" pInputText formControlName="citizen">
+        </div>
+
+        <div class="mt-4">
+          <button class="btn-success btn" type="submit" [disabled]="!userForm.valid">
+            Перейти к оформлению
+          </button>
+        </div>
+      </div>
     </div>
   </div>
+  <div class="mt-4">
+    <h4>Похожие туры</h4>
+    <div>
+      <input #ticketSearch [(ngModel)]="ticketSearchValue" type="text" pInputText/>
+    </div>
+    <p-carousel [value]="nearestTours">
+      <ng-template let-tour pTemplate="item">
+        {{tour.name}} / {{tour.region.name}}
+        <div class="ticket-img-nearest">
+          <img class="w-100 h-100" src="/assets/img/{{tour.img}}">
+        </div>
+      </ng-template>
+    </p-carousel>
+  </div>
 </div>
+<ng-template #userFieldTitle let-value="titleValue">
+  <span class="mx-3">{{value}}</span>
+</ng-template>
