--- a/FRNT-RXJS/ticketSales/src/app/pages/ticket-info/ticket-item/ticket-item.component.html
+++ b/FRNT-RXJS/ticketSales/src/app/pages/ticket-info/ticket-item/ticket-item.component.html
@@ -13,32 +13,32 @@
       <h4>Личная информация</h4>
       <div class="mt-3 user-info" [formGroup]="userForm" (ngSubmit)="onSubmit()">
         <div class="mt-3">
-          <span class="mx-3">Имя</span>
+          <ng-container *ngTemplateOutlet="userFieldTitle; context: {titleValue: 'Имя'}"></ng-container>
           <input type="text" class="mt-3" pInputText formControlName="firstName">
         </div>
         <div class="mt-3">
-          <span class="mx-3">Фамилия</span>
+          <ng-container *ngTemplateOutlet="userFieldTitle; context: {titleValue: 'Фамилия'}"></ng-container>
           <input type="text" class="mt-3" pInputText formControlName="lastName">
         </div>
         <div class="mt-3">
-          <span class="mx-3">Номер карты</span>
+          <ng-container *ngTemplateOutlet="userFieldTitle; context: {titleValue: 'Номер карты'}"></ng-container>
           <input type="text" class="mt-3" pInputText formControlName="cardNumber">
         </div>
         <div class="mt-3">
-          <span class="mx-3">Возраст</span>
+          <ng-container *ngTemplateOutlet="userFieldTitle; context: {titleValue: 'Возраст'}"></ng-container>
           <p-inputNumber [showButtons]="true" formControlName="age"></p-inputNumber>
         </div>
         <div class="mt-3">
-          <span class="mx-3">Дата рождения</span>
+          <ng-container *ngTemplateOutlet="userFieldTitle; context: {titleValue: 'Дата рождения'}"></ng-container>
           <p-calendar (onSelect)="selectDate($event)" formControlName="birthDay"></p-calendar>
         </div>
         <div class="mt-3">
-          <span class="mx-3">Гражданство</span>
+          <ng-container *ngTemplateOutlet="userFieldTitle; context: {titleValue: 'Гражданство'}"></ng-container>
           <input type="text" class="mt-3" pInputText formControlName="citizen">
         </div>
 
         <div class="mt-4">
-          <button class="btn-success btn" type="submit" [disabled]="!userForm.valid">
+          <button class="btn-success btn" type="submit" (click)="initTour()" [disabled]="!userForm.valid">
             Перейти к оформлению
           </button>
         </div>
